# tinydnn

./: .gitignore  CMakeLists.txt  README.md  setup.py
docs/: .paper.tex.swp  paper.bib  paper.tex
notebooks/: Untitled.ipynb
src/: dataloader.cpp  dataloader.h  dataset.cpp  dataset.h  dnn.cpp  layer.h  loss.h  loss_fn.h  main.cpp
src/dataset/: CMakeLists.txt  dataset.cpp  dataset.h  generator.cpp  generator.h  mnist.cpp  mnist.h
src/dnn/: dnn.h
src/loss/: CMakeLists.txt  loss.cpp  loss.h  loss_fn.cpp
src/loss/test/: loss_test.h  main.cpp
